iptables.txt
# Generated by iptables-save v1.4.21 on Tue Mar  6 10:40:51 2018
*filter
:INPUT DROP [1623:579304]
:FORWARD ACCEPT [233:79204]
:OUTPUT ACCEPT [1690:102802]
-A INPUT -i tun0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -s 192.168.0.0/24 -j ACCEPT
-A FORWARD -i eth0 -o eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -j ACCEPT
COMMIT
# Completed on Tue Mar  6 10:40:51 2018
# Generated by iptables-save v1.4.21 on Tue Mar  6 10:40:51 2018
*nat
:PREROUTING ACCEPT [1732:585144]
:INPUT ACCEPT [2:656]
:OUTPUT ACCEPT [25:1555]
:POSTROUTING ACCEPT [5:299]
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Mar  6 10:40:51 2018
